Fix vertical spacing in compact context menus
Fix https://github.com/vector-im/element-web/issues/20801

Regressed in https://github.com/matrix-org/matrix-react-sdk/pull/7339

Relevant styles were first added in https://github.com/matrix-org/matrix-react-sdk/pull/4858
(context behind why the original styles were added)

--- a/res/css/views/messages/_JumpToDatePicker.scss
+++ b/res/css/views/messages/_JumpToDatePicker.scss
@@ -16,6 +16,8 @@ limitations under the License.
 
 .mx_JumpToDatePicker_form {
     display: flex;
+    padding-top: 12px;
+    padding-bottom: 12px;
 }
 
 .mx_JumpToDatePicker_label {
